[metadata]
name = yulang
version = 0.0.2
author = Yudha Styawan
author_email = yudhastyawan@gmail.com
description = yulang programming language embedded in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yudhastyawan/yulang
project_urls =
    Bug Tracker = https://github.com/yudhastyawan/yulang/issues
    Documentation = http://yulang.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[bdist_wheel]
python-tag = py38
plat-name = win_amd64